--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@ def sum(lt) {
  
 lt = range(1, 11)
  
-println(lt.join(' + ') + ' = ' + sum(lt))</code></strong></pre>
+println(lt.join(' + ') + ' = ' + sum(lt))
+
+x = new String('aBc')
+println(x.toUpperCase())
+println(x.toLowerCase())</code></strong></pre>
     <ul>
       <li>Laboratory</li>
     </ul>
@@ -154,5 +158,6 @@ println('Hello World')</textarea> <br>
                 .parse(new Tokenizer(code))
                 .evaluate(Context.initialize(ENVIRONMENT));
     });
-</script> </body>
+</script>
+</body>
 </html>
