re-organize modules

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ println('Hello World')</textarea> <br>
     <textarea readonly="readonly" id="tty" style="background: #000;color:#fff;"></textarea>
     <script type="module">
     import {Tokenizer} from './js/toy_lang/interpreter/tokenizer/tokenizer.js';        
-    import {Context} from './js/toy_lang/interpreter/ast/context.js';
+    import {Context} from './js/toy_lang/context.js';
     import {ToyParser} from './js/toy_lang/interpreter/toy_parser.js';
 
     const ENVIRONMENT = {
