--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ println(acct)</code></strong></pre>
     lt = new List()
     i = begin
     while i &lt; end {
-        lt.append(i)
+        lt.add(i)
         i = i + 1
     }
     return lt
