--- a/index.html
+++ b/index.html
@@ -124,12 +124,10 @@ def sum(lt) {
 }
  
 lt = range(1, 11)
- 
 println(lt.join(' + ') + ' = ' + sum(lt))
 
-x = new String('aBc')
-println(x.toUpperCase())
-println(x.toLowerCase())</code></strong></pre>
+println(new String('aBc').toUpperCase())
+println(new String('aBc').toLowerCase())</code></strong></pre>
 <ul>
     <li># Closure</li>
   </ul>
