--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body> <a href="https://openhome.cc"><img src="https://openhome.cc/Gossip/images/caterpillar_small_front.jpg"></a>
-    <p>You can find the source code on <a href="https://github.com/JustinSDK/toy_lang">Github</a>. 
+    <p>View it on <a href="https://github.com/JustinSDK/toy_lang">Github</a>. 
         Toy lang is the first language I made and might be a prototype if you want to design your own language.  
         ES6 modules support is required. </p>
         <ul>
