--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ println(c1.greaterEqualsThan(c2))</code></strong></pre>
     <li># meta programming</li>
   </ul>
   <pre><strong><code>println(Object.methods())
-Object.deleteMethod('toString')    
+Object.deleteOwnMethod('toString')    
 println(Object.methods())
 
 def toString() {
