--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ class Circle {
     }
 
     def equals(that) {
-        return this.radius === that.radius;
+        return this.radius === that.radius
     }
 }
 
@@ -326,7 +326,7 @@ class Circle(Ordered) {
     }
 
     def equals(that) {
-        return this.radius === that.radius;
+        return this.radius === that.radius
     }
 }
 
