--- a/index.html
+++ b/index.html
@@ -179,6 +179,24 @@ println('obj.x() is ' + obj.x())
 println('obj.y is ' + obj.y)
 println('obj.z is ' + obj.z)</code></strong></pre>
 <ul>
+    <li># Lambda expression</li>
+  </ul>
+  <pre><strong><code>lt = new List().add(1).add(2).add(3).add(4)
+println(lt.filter(elem -> elem >= 2).map(elem -> elem * 100))
+
+def foo(x, y) {
+    return () -> x + y
+}
+
+println(foo(10, 20)())
+
+def orz() {
+    x = 10
+    return (y, z) -> x + y + z 
+}
+
+println(orz()(100, 200))</code></strong></pre>
+<ul>
     <li># Mixin</li>
   </ul>
   <pre><strong><code>class Ordered {
@@ -364,8 +382,7 @@ println(C.setParents(new List().add(PA).add(PB)).parents())
 
 new C().pa()
 new C().pb()
-new C().c()
-</code></strong></pre>
+new C().c()</code></strong></pre>
     <script type="module">
     import {Toy} from './js/toy_lang/toy.js';
 
