--- a/index.html
+++ b/index.html
@@ -195,7 +195,12 @@ def orz() {
     return (y, z) -> x + y + z 
 }
 
-println(orz()(100, 200))</code></strong></pre>
+println(orz()(100, 200))
+
+# IIFE
+(() -> println('XD'))()
+(x -> println(x))('XD')
+println(((x, y) -> x + y)(1, 2))</code></strong></pre>
 <ul>
     <li># Mixin</li>
   </ul>
