--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ println('obj.z is ' + obj.z)</code></pre>
     <li># Lambda expression</li>
   </ul>
   <pre class="prettyprint"><code>lt = new List().add(1).add(2).add(3).add(4)
-println(lt.filter(elem -> elem >= 2).map(elem -> elem * 100))
+lt.filter(elem -> elem >= 2).map(elem -> elem * 100).forEach(println)
 
 def foo(x, y) {
     return () -> x + y
