simple runtime error message

--- a/index.html
+++ b/index.html
@@ -413,7 +413,12 @@ new C().c()</code></pre>
         let code = document.getElementById('code').value;
         let tty = document.getElementById('tty');
         tty.textContent = '';
-        new Toy(ENVIRONMENT, code).play();
+        try {
+            new Toy(ENVIRONMENT, code).play();
+        }
+        catch(e) {
+            tty.textContent = e;
+        }
     });
 </script>
 </body>
