--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
   </head>
   <body> <a href="https://openhome.cc"><img src="https://openhome.cc/Gossip/images/caterpillar_small_front.jpg"></a>
     <p>View it on <a href="https://github.com/JustinSDK/toy_lang">Github</a>. 
-        Toy lang is the first language I made and might be a prototype if you want to design your own language.  
-        ES6 modules support is required. </p>
+        Toy lang is the first language I made. ES6 modules support is required. </p>
         <hr>
         <h1>Playground</h1>
           <textarea id="code"># Is a language easier if 'Hello World' is easier?
