--- a/index.html
+++ b/index.html
@@ -191,7 +191,11 @@ println('obj.z is ' + obj.z)</code></pre>
     <li># Lambda expression</li>
   </ul>
   <pre class="prettyprint"><code>lt = new List().add(1).add(2).add(3).add(4)
-lt.filter(elem -> elem >= 2).map(elem -> elem * 100).forEach(println)
+      
+# use \ for cross-line expression       
+lt.filter(elem -> elem >= 2) \
+  .map(elem -> elem * 100)   \
+  .forEach(println)
 
 def foo(x, y) {
     return () -> x + y
@@ -391,8 +395,8 @@ class C {
 }
 
 println(C.parents())
-
-println(C.setParents(new List().add(PA).add(PB)).parents())
+C.setParents(new List().add(PA).add(PB))
+println(C.parents())
 
 new C().pa()
 new C().pb()
