--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ while n &lt;= 5 {
 
     def deposit(amount) {
         if amount &lt;= 0 {
-            println('must be positive')
+            throw 'must be positive'
             return
         }
 
