--- a/index.html
+++ b/index.html
@@ -189,9 +189,7 @@ println('obj.z is ' + obj.z)</code></pre>
 <ul>
     <li># Lambda expression</li>
   </ul>
-  <pre class="prettyprint"><code>
-      
-# use \ for cross-line expression       
+  <pre class="prettyprint"><code># use \ for cross-line expression       
 list(1, 2, 3, 4, 5).filter(elem -> elem >= 2) \
                    .map(elem -> elem * 100)   \
                    .forEach(println)
