--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         <hr>
         <h1>Playground</h1>
           <textarea id="code"># Is a language easier if 'Hello World' is easier?
-println('Hello World')</textarea> <br>
+println('Hello World')
+println('Hello {0}'.format('World'))
+printf('Hello {0}\n', 'World')
+println(format('Hello {0}', 'World'))</textarea> <br>
           <br>
           <button id="run">Run It</button> <br>
           <br>
