--- a/index.html
+++ b/index.html
@@ -250,8 +250,9 @@ println(c1.greaterEqualsThan(c2))</code></pre>
         println('PA init')
     }
 
-    def ma() {
-        println('ma')
+    def ma(x, y) {
+        println(x)
+        println(y)
     }
 }
 
@@ -263,7 +264,7 @@ class PB {
 
 class C(PA, PB) {
     def init() {
-        PA.method('init').apply(this) # super init
+        this.super(PA, 'init')
         println('C init')
     }
 
@@ -271,14 +272,14 @@ class C(PA, PB) {
         println('mc')
     }
 
-    def ma() {
-        PA.method('ma').apply(this) # super method
+    def ma(x, y) {
+        this.super(PA, 'ma', x + 1, y + 1)
         println('c.ma()')
     }
 }
 
 c = new C()
-c.ma()
+c.ma(10, 20)
 c.mb()
 c.mc()</code></pre>
 <ul>
