--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@ println('obj.z is ' + obj.z)</code></pre>
                    .map(elem -> elem * 100)   \
                    .forEach(println)
 
+range(1, 10) \
+  .map(n -> range(2, 10).map(i -> '{0}*{1}={2}'.format(i, n, i * n)).join('\t')) \
+  .forEach(println) 
+                    
 def foo(x, y) {
     return () -> x + y
 }
